--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
+    "gulp-connect": "^2.3.1",
+    "gulp-inject": "^3.0.0",
+    "gulp-typescript": "^2.10.0",
     "lite-server": "^1.3.1",
+    "rimraf": "^2.5.1",
     "typescript": "^1.8.0-dev.20160119"
   }
 }
